syntax = "proto3";

import "auth/user_token.proto";

package verifyAccount;

service VerifyAccountService {
    rpc VerifyAccount(VerifyAccountRequest) returns (VerifyAccountResponse);
    rpc SendMailOtp(SendMailRequest) returns (SendMailResponse);
}

message VerifyAccountRequest {
    string email = 1;
    string domain = 2;
    string otp = 3;
    optional userToken.Role role = 4;
}

message VerifyAccountResponse {
    string result = 1;
}

message SendMailRequest {
    string email = 1;
    string domain = 2;
    optional userToken.Role role = 3;
}

message SendMailResponse {
    string result = 1;
}